first assignment on python

--- a/lesson_1.ipynb
+++ b/lesson_1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "1e0bf5f8-2ff1-4561-a892-7066c337ca2a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "c7f61ec1-042b-4948-9882-b46cf45ea553",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "39c23ca9-6ae9-4b8d-a9a6-01509638be67",
    "metadata": {},
    "outputs": [],
@@ -43,16 +43,8 @@
    "id": "36a1c6fd-8674-4489-92a2-864849e65d4a",
    "metadata": {},
    "source": [
-    "# VARIABLES NAMING CONVENTION"
+    "### VARIABLES NAMING CONVENTION"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04731ab8-883f-4864-ab2c-bb1c17300ca3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -82,14 +74,14 @@
     "\n",
     "NOTE;\n",
     "- ()is called parenthesis\n",
-    "- [ ] is called square bracket\n",
+    "- [  ] is called square bracket\n",
     " - { } is called curly braces\n",
     "      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "31e9d338-7ac6-44ec-be07-2fb1f55cdeac",
    "metadata": {},
    "outputs": [],
@@ -99,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "19657bc3-d34a-4eee-8634-532784451d09",
    "metadata": {},
    "outputs": [
@@ -112,12 +104,12 @@
     }
    ],
    "source": [
-    "print (x)"
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "7e446a5c-bac7-47e7-a457-20f91930323c",
    "metadata": {},
    "outputs": [
@@ -130,12 +122,12 @@
     }
    ],
    "source": [
-    "print (address)"
+    "print(address)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "ae533aa1-1902-44a9-a39d-a0fc15898fe6",
    "metadata": {},
    "outputs": [],
@@ -145,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "def4cc97-a5a3-4a57-9aa9-4f018519ff84",
    "metadata": {},
    "outputs": [
@@ -166,12 +158,12 @@
    "id": "43f53276-3709-4456-ad02-f7c61ccc0ffc",
    "metadata": {},
    "source": [
-    "###PYTHON COMMENTS"
+    "### PYTHON COMMENTS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "654aa642-417e-4b17-b293-ab1c83538ba4",
    "metadata": {},
    "outputs": [],
@@ -181,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "4ba880ef-148b-45ef-8498-f4efd47b6e25",
    "metadata": {},
    "outputs": [],
@@ -192,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "e26282bb-5191-4da2-a67a-1aba391a5bae",
    "metadata": {},
    "outputs": [
@@ -218,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "330f5377-38d4-43db-a5b9-1ccb1181e1a7",
    "metadata": {},
    "outputs": [],
@@ -228,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "33f27f19-52d9-4152-891d-6806707e1433",
    "metadata": {},
    "outputs": [
@@ -350,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "68c7d3e6-aa65-46fa-8a01-7a1ddfe5c30a",
    "metadata": {},
    "outputs": [],
@@ -360,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "b4e023a5-db09-4354-845d-7a95b6d9691a",
    "metadata": {},
    "outputs": [
@@ -373,7 +365,7 @@
     }
    ],
    "source": [
-    "print (corrupt_number)"
+    "print(corrupt_number)"
    ]
   },
   {
@@ -404,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "id": "bf8f075f-8e40-4efe-a6b3-473d6b3a0b26",
    "metadata": {},
    "outputs": [],
@@ -436,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "id": "bc669037-c31a-4624-ad6a-917a5b42c475",
    "metadata": {},
    "outputs": [],
@@ -446,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "id": "9899c053-3afe-4615-850a-655acca25dfe",
    "metadata": {},
    "outputs": [
@@ -464,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "6b28af41-2e57-4822-b554-2c38ebfe2303",
    "metadata": {},
    "outputs": [
@@ -482,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "8477ebad-5c46-4264-93ed-3561b35d23ba",
    "metadata": {},
    "outputs": [
@@ -500,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "de2a6d2c-0a2c-42a5-976b-d6a849b08711",
    "metadata": {},
    "outputs": [],
@@ -510,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "id": "cc1e4f39-35fc-4b97-b4d6-7342a55d06c0",
    "metadata": {},
    "outputs": [
@@ -528,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "id": "2683124c-8d86-44c9-9ff3-959033f82ace",
    "metadata": {},
    "outputs": [
@@ -546,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "id": "d8b5a1b4-1b29-40b2-af4f-f79b6b7b5a35",
    "metadata": {},
    "outputs": [],
@@ -556,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "id": "b13afcbd-6b90-4883-a286-8180ad1c710a",
    "metadata": {},
    "outputs": [
@@ -574,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "id": "5302a0b9-ab68-457e-baba-af66bc61ad42",
    "metadata": {},
    "outputs": [
@@ -592,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "id": "efac24e3-215f-42f5-9fea-59b1a6e45e0d",
    "metadata": {},
    "outputs": [],
@@ -602,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "id": "6049fdfd-bbd9-426c-85d8-a0fb74f48dac",
    "metadata": {},
    "outputs": [],
@@ -612,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "id": "b6c3abff-5505-455a-abf3-b7ca56eb937a",
    "metadata": {},
    "outputs": [
@@ -630,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "id": "345bbb39-514f-412f-a513-4aa521ef4c3a",
    "metadata": {},
    "outputs": [
@@ -648,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "id": "1ed71097-ebe0-43da-bda5-00f1b1159f8c",
    "metadata": {},
    "outputs": [],
@@ -658,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "id": "34b8dd8d-9ba8-492f-b7a2-1823188e187d",
    "metadata": {},
    "outputs": [],
@@ -668,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "id": "47e982a9-6201-45e8-8ec7-249df823e77c",
    "metadata": {},
    "outputs": [
@@ -686,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "id": "ef14fe8a-54aa-435d-9c89-cf50ace0916c",
    "metadata": {},
    "outputs": [],
@@ -696,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "id": "6c03cb74-abff-42d5-9b25-bf8996dc6b0f",
    "metadata": {},
    "outputs": [
@@ -714,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "id": "7213301e-0e82-484f-94f0-953a88b23fa4",
    "metadata": {},
    "outputs": [],
@@ -724,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "id": "974b611a-64e4-462c-979c-237dd7d278b6",
    "metadata": {},
    "outputs": [],
@@ -734,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "id": "1cdcd8b7-ca81-46c9-b4cf-219ef4630dca",
    "metadata": {},
    "outputs": [
@@ -752,8 +744,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "id": "0471d87a-86c3-49c2-b04d-af3e24a2007e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rounded_x_1_decimal = round(y, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "34e7844b-0d3c-44b9-820e-1863b7cf1c12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rounded_x_1_decimal)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "302a09fa-344c-443d-857b-2149f5c543ad",
+   "id": "9aabe2fb-2c7a-4342-8f1d-108e86868c27",
    "metadata": {},
    "outputs": [],
    "source": []
