adding concatenation and interpolation

--- a/lesson_1.ipynb
+++ b/lesson_1.ipynb
@@ -777,6 +777,252 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1af6ca29-76f8-4024-93d5-e3ff5c0f4d23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec745654-88ba-4c8b-8acd-60582552e356",
+   "metadata": {},
+   "source": [
+    "## concatenation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e15fbf78-656e-49ba-a28e-d8c35595a404",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_name = \"mayowa \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d2a98d94-fc5d-4a00-ab7f-51bdb504831a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "last_name= \" akinyele\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f411b188-7502-4a0e-b2a6-daf8f26d19e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mayowa akinyele\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(first_name + last_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c2cc8770-7655-4953-b62e-fd87742e2ef8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how are you\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"how \" + \"are\" + \" you\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4448e7a-1e7a-4719-a41e-4d3b7c50904a",
+   "metadata": {},
+   "source": [
+    "## Multiline strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "57cf3745-006b-4207-b05f-e87d0287757b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"\"\"how are you,\n",
+    "my name is yinka, \n",
+    "i live in germany\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "59f57fdc-3457-41ea-905f-00aaa5aacb6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how are you,\n",
+      "my name is yinka, \n",
+      "i live in germany\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e3cbb12-28c8-42af-9d45-8bdc967525be",
+   "metadata": {},
+   "source": [
+    "## User Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bc4fa415-0752-41cc-9909-5b5990a4cac0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "please what is your age:  20\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = int(input(\"please what is your age: \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a521c6c3-f5ad-4392-a904-02223c02c513",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(question))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3644cf29-1052-439b-a4f7-654c352e99d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_age = question + 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bebe2d9d-21b7-4632-b716-29d90c7124e5",
+   "metadata": {},
+   "source": [
+    "## String Interpolation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d3eb1cd6-e64d-41d4-942c-6df1d983d8d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = 30 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6a511f62-f7e6-41f9-a1c6-c2b0f49acc9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "64e635dc-799e-4c87-b784-be314df6731b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my age is 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"my age is\", age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4d76ea56-28e7-4530-9bd7-f191a54d9b45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is yinka, i am 30 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"my name is yinka, i am {age} years old\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6b380de-7778-46cc-a89c-e9719f80411f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
