correction of assignment

--- a/assignment_1.ipynb
+++ b/assignment_1.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "c5cf9bf2-a6a8-4028-af58-853846ed16bc",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "138c6201-4b26-4b1d-a66f-77bb69fae67b",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "58bc6fc6-c0a1-42c6-b9cc-12fe2647f800",
    "metadata": {},
    "outputs": [
@@ -228,10 +228,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "7edcab67-3c19-408e-8b7b-e6b0a55934dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lenght' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m new_lenght \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[43mlenght\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'lenght' is not defined"
+     ]
+    }
+   ],
    "source": [
     "new_lenght = float(lenght)"
    ]
@@ -274,10 +286,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "3c986e51-429f-47a6-a757-2944d000e798",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'new_lenght' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m change_new_lenght \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mround\u001b[39m(\u001b[43mnew_lenght\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'new_lenght' is not defined"
+     ]
+    }
+   ],
    "source": [
     "change_new_lenght = round(new_lenght)"
    ]
