adding python operators

--- a/lesson_1.ipynb
+++ b/lesson_1.ipynb
@@ -1017,9 +1017,730 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3ccb91a2-0137-45c9-9a63-4af7cf2141a4",
+   "metadata": {},
+   "source": [
+    "###  String Methods or Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "67e5e909-5b6f-4291-919b-bca221382e3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"yinka\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1a34a75d-39c5-470d-b88d-3c3db3941e0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YINKA\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name.upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e293fbc4-45b2-45d9-83e6-35c742511736",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "last_name = \"OJO\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "41b65a52-e011-4eec-bc80-7a5868d0ee1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yinka\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d7b74c37-094f-44bd-8097-1ca6d80e90b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address = \"berliner strasse 6, cottbus\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "6fac62d5-1856-4031-b227-991a54d2d85b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(address.count(\"e\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "685ec143-a8a3-4b47-8d59-e2e3c572c39f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car = \"Benz\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c33019e0-d8d2-487f-b7b0-7d63a4bd01f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(car.startswith(\"B\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "f988f4c1-1d6e-4fd8-a2ee-061a8a93705a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(car.endswith(\"B\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6ce00446-65b3-49ab-a17a-bf9731203e84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corrupt_data = \"56y\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "35a5a412-a521-4724-b404-6658673a03ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(corrupt_data.isnumeric())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "e7e4c0c1-4732-48c3-b3f8-1e9b331ef0fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corrupt_data = \"56\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "faede8c0-407f-45d8-8243-e8be8cb75cda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(corrupt_data.isnumeric())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "17a95740-722a-485e-a161-cfffa9fce8b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"Elayinka\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "bc54ecd5-4b8b-47e6-bc4e-ee95e513c1f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correct_name = name.replace(\"E\", \"O\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "46857080-5f4c-401c-a381-b876fd7de0e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olayinka\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(correct_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "3ea0446f-0518-441b-823d-7d1e7b3a16d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "another_name = \"ojo\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "367723a0-caeb-4b27-9a8d-dd79cb30714a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_name_version = another_name.replace(\"o\", \"F\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e280f00b-32a6-4453-b942-bc8556b8973d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FjF\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_name_version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "6efc1f0a-5c4b-446e-a33b-22d0467f2ed7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"o jo \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "255cba72-c8a3-420c-b58d-fc77ba892899",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o jo \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "244afd92-04ba-41db-9538-ce3e0e322d3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_name = name.replace(\" \", \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "b435cd85-e93f-42d9-ad2d-a9500491b477",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ojo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cleaned_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "7f490a94-76ad-4d42-b7da-aa5f02df4227",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "3901141f-8e77-4531-851e-5407651487e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unmatched ')' (2236593137.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[62], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(age.replace\"2\", \"9\"))\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(age.replace\"2\", \"9\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ee52abd-0071-4030-8ff3-dc05d6d126db",
+   "metadata": {},
+   "source": [
+    "### Python Operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d885a0f1-f9fd-4cae-80d8-cfe18ee61f77",
+   "metadata": {},
+   "source": [
+    "#### arithmetic operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "1a1cf12f-daa0-43dc-b43e-c940c1681f92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2 + 2)   #addition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "626fdc68-ce1c-4c9f-b832-75db4a4b5a1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(4 - 2)    # subtraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "5fa6350c-a04b-4a82-a1e7-7c8b37509f2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(4 * 2)  # multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "67777087-f61f-4de7-9a19-15bfb3d247e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(10 / 2)  # division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "f5be3a66-fb20-43ab-af29-f3c7a175fd09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(10 // 2) # floor division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "4037194e-9970-409c-a8c7-5f4a268ee3fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(6 % 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "42d29286-36e7-47a3-8166-3fb0acb6251f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5 % 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "1025542a-4b94-4fa3-a551-1ad5a9c65655",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2 ** 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8c0b4c6-17dd-4b37-ae56-8f39dee17784",
+   "metadata": {},
+   "source": [
+    "#### comparison operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "37458b63-5393-4fcc-bd3c-28924951ee62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2 == 2) # equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "301dadb4-39f4-4ca0-8182-f8e21a6abefd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2 == 4) # equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "6f2e4049-527b-41fd-9d5e-aca7432d7e17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2 != 5) # not equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "a409e67d-d3dc-49c6-a170-9d44c445f19b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2 > 4) # greater than"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "03997a1b-1f47-4d0a-8f9a-36d22aa0d3e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2 < 4) # less than"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "8f037282-124e-405c-9800-4c38f0cc35a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2 <= 2) # less or equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "9af2c579-cd81-42d6-97a1-436a508890dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(10 >= 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "756b62a2-7b27-44f7-9210-e2a6a68487bf",
+   "metadata": {},
+   "source": [
+    "#### Membership Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "de85066a-59df-4292-8384-ddd4ed8c96df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"yinka\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "6001a101-8c3c-4fde-a64c-39bfa358bc47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"y\" in name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "e7b62371-b0d4-4b5a-946b-d3c0707a9eaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Y\" in name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "564c8292-c488-4404-95fd-3a0053bf95d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"d\" not in name) # not in"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6b380de-7778-46cc-a89c-e9719f80411f",
+   "id": "7f765ee1-fae8-4504-b367-ddb81ce2d1d6",
    "metadata": {},
    "outputs": [],
    "source": []
