--- a/assignment_1.ipynb
+++ b/assignment_1.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "58bc6fc6-c0a1-42c6-b9cc-12fe2647f800",
    "metadata": {},
    "outputs": [
@@ -228,29 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "7edcab67-3c19-408e-8b7b-e6b0a55934dc",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'lenght' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m new_lenght \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[43mlenght\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'lenght' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_lenght = float(lenght)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "1e56bdd5-1c70-479c-9ca8-249f96f799a0",
    "metadata": {},
    "outputs": [
@@ -268,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "dd67b6e8-a2d4-439b-b669-232ad7c63564",
    "metadata": {},
    "outputs": [
@@ -286,29 +274,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "3c986e51-429f-47a6-a757-2944d000e798",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'new_lenght' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m change_new_lenght \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mround\u001b[39m(\u001b[43mnew_lenght\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'new_lenght' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "change_new_lenght = round(new_lenght)"
+    "change_new_lenght = int(new_lenght)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "fd97959c-517f-483b-9260-c1ec56410c0e",
    "metadata": {},
    "outputs": [
@@ -316,7 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "4\n"
      ]
     }
    ],
@@ -326,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "340d9e28-f1b9-40c5-b285-1ff98a123ffa",
    "metadata": {},
    "outputs": [
