adding python operators

--- a/lesson_1.ipynb
+++ b/lesson_1.ipynb
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 87,
    "id": "4037194e-9970-409c-a8c7-5f4a268ee3fb",
    "metadata": {},
    "outputs": [
@@ -1492,7 +1492,7 @@
     }
    ],
    "source": [
-    "print(6 % 3)"
+    "print(6 % 3) # modulo"
    ]
   },
   {
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 88,
    "id": "1025542a-4b94-4fa3-a551-1ad5a9c65655",
    "metadata": {},
    "outputs": [
@@ -1528,7 +1528,7 @@
     }
    ],
    "source": [
-    "print(2 ** 3)"
+    "print(2 ** 3) # exponentiation"
    ]
   },
   {
@@ -1555,6 +1555,24 @@
    ],
    "source": [
     "print(2 == 2) # equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "2dab28e6-3430-4c92-aa9f-1c7039c870d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2 == \"2\")"
    ]
   },
   {
@@ -1685,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 90,
    "id": "6001a101-8c3c-4fde-a64c-39bfa358bc47",
    "metadata": {},
    "outputs": [
@@ -1698,7 +1716,7 @@
     }
    ],
    "source": [
-    "print(\"y\" in name)"
+    "print(\"y\" in name) # in"
    ]
   },
   {
