uploading assignment_2 for python class

--- a/lesson_1.ipynb
+++ b/lesson_1.ipynb
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e15fbf78-656e-49ba-a28e-d8c35595a404",
    "metadata": {},
    "outputs": [],
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d2a98d94-fc5d-4a00-ab7f-51bdb504831a",
    "metadata": {},
    "outputs": [],
@@ -712,20 +712,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f411b188-7502-4a0e-b2a6-daf8f26d19e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mayowa  akinyele\n"
+     ]
+    }
+   ],
    "source": [
     "print(first_name + last_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c2cc8770-7655-4953-b62e-fd87742e2ef8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how are you\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"how \" + \"are\" + \" you\")"
    ]
@@ -808,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d3eb1cd6-e64d-41d4-942c-6df1d983d8d0",
    "metadata": {},
    "outputs": [],
@@ -818,20 +834,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6a511f62-f7e6-41f9-a1c6-c2b0f49acc9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
    "source": [
     "print(age)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "64e635dc-799e-4c87-b784-be314df6731b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my age is 30\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"my age is\", age)"
    ]
